Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
None
-
None
-
Not for Release Notes
-
Q4/2025 Server Development, Q1/2026 Server Development, Q1/2026 Server Maintenance
Description
An infinite loop happens in open_tables after REPAIR TABLE t under LOCK TABLES.
CREATE TABLE t1(x int); |
CREATE GLOBAL TEMPORARY TABLE t (x INT); |
LOCK TABLES t WRITE, t1 WRITE;
|
REPAIR TABLE t, t1; |
ANALYZE TABLE t; |
A table is marked flushed after repair, LOCK prevents eviction. Then, a table is denied to open flush, and backoff is issued – the retries happen in the infinite loop.
Attachments
Issue Links
- is caused by
-
MDEV-35915 Implement Global temporary tables
-
- Stalled
-