MDEV-38266 Infinite loop after LOCK+REPAIR

Case:
1. Two tables are locked, one of them is GTT
2. Invoke REPAIR on the last table in the list (not GTT)
3. SELECT from gtt

How the bug works:
1. REPAIR sets tdc->flushed=true
2. LOCK TABLE will prevent eviction
3. In SELECT, open_table will go by locked_tables_mode path
4. GTT is found, goto get_new_table (bug!).
5. This is true: thd->open_tables && thd->open_tables->s->tdc->flushed
6. ot_ctx->request_backoff_action
7. open_table retry (infinite).

Fix:
Straighten the flow.
We shouldn't check thd->open_tables->s->tdc->flushed in LTM, but
actually we should do none under get_new_table label right until
open_global_temporary_table.

get_new_table would access tdc and search for TABLE_SHARE, but actually
we already have it. We also shouldn't configure it from scratch - it's
already done. Overall, we can jump directly to opening GTT, with setting
a few variables.

Because TABLE_SHARE will not be opened through tdc (where acquire would
happen), we shouldn't release it in open_global_temporary_table under
locked_tables_mode+MYSQL_OPEN_GET_NEW_TABLE.

Parent issue:
MDEV-35915 Implement Global temporary tables